# richards-equation

./: .gitignore  README.md  pyproject.toml
daisy_solvers/: __init__.py
daisy_solvers/ogden2017/: __init__.py  exact_nonlinear.py  exact_power_law.py
